--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <head>
     <title>SCRABBLE</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
