--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     Date: 12/20/2022
     GUI HW5 Scrabble Project
 
-    About this file: Main HTML file. Lays out ul's for board and rack as well as score/word visuals.  
+    About this file: Main HTML file. Lays out ul's for board and rack as well as score/word visuals
 -->
 
 <html>
