--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     Date: 12/20/2022
     GUI HW5 Scrabble Project
 
-    About this file: Main HTML file. Lays out ul's for board and rack as well as score/word visuals
+    About this file: Main HTML file. Lays out ul's for board and rack as well as score/word visuals.  
 -->
 
 <html>
 
 <head>
     <title>SCRABBLE</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <div id="ScrabbleHeader">
         <h1>SCRABBLE</h1>
     </div>
-    
 
     <!-- Content for Game -->
     <div id="content">
@@ -98,7 +97,7 @@
     <!-- Script Includes -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
-    <script src="js/java.js"></script>
+    <script src="/js/java.js"></script>
 </body>
 
 </html>
