--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <head>
     <title>SCRABBLE</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -97,7 +97,7 @@
     <!-- Script Includes -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
-    <script src="/js/java.js"></script>
+    <script src="js/java.js"></script>
 </body>
     
 </html>
